--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "tadoo",
   "version": "1.0.0",
   "description": "Login, create, and save todos",
+  "engines": {
+    "node": "9.4.0",
+    "npm": "5.8.0"
+  },
   "main": "app.js",
   "scripts": {
     "start": "NODE app.js"
