--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "name": "tadoo",
   "version": "1.0.0",
   "description": "Login, create, and save todos",
-  "engines": {
-    "node": "9.4.0",
-    "npm": "5.8.0"
-  },
   "main": "app.js",
   "scripts": {
-    "start": "NODE app.js"
+    "start": "SET NODE_ENV=development&& NODE app.js"
   },
   "author": "Nick Snyder",
   "license": "MIT",
