--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Login, create, and save todos",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "set node_env=dev&& node app.js"
   },
   "author": "Nick Snyder",
   "license": "MIT",
